--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -16,7 +16,7 @@
 <div class="overlay mob-prod-det-spacer"></div>
 <div class="container-fluid">
     <div class="row">
-        
+
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
             <div class="image-container my-5">
 
@@ -35,6 +35,13 @@
             <div class="product-details-container mb-5 mt-md-5">
                 <p class="mb-0">{{ product.name }}</p>
                 <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                {% if product.category %}
+                <p class="small mt-1 mb-0">
+                    <a class="text-muted" href="{% url 'category_products' category_id=product.category.id %}">
+                        <i class="fas fa-tag mr-1"></i>{{ product.category.get_friendly_name }}
+                    </a>
+                </p>
+                {% endif %}
                 {% if product.reviews.all %}
                 <small class="text-muted"><i
                         class="fas fa-star mr-1"></i>{{ product.reviews.all | calculate_average_rating }} / 5</small>
@@ -42,8 +49,42 @@
                 <small class="text-muted">No Rating</small>
                 {% endif %}
                 <p class="mt-3">{{ product.description }}</p>
+
+                <div class="col-12">
+                    {% if user.is_authenticated %}
+    {% if not is_reviewed %}
+        <form method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="rating">Rating:</label>
+                <select name="rating" id="rating" class="form-control">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="comment">Comment:</label>
+                <textarea name="comment" id="comment" class="form-control" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    {% else %}
+        <p>You have already submitted a review for this product.</p>
+    {% endif %}
+{% else %}
+    <p>Please <a href="{% url 'account_login' %}">Login</a> or <a href="{% url 'account_signup' %}">Register</a> to submit a review.</p>
+{% endif %}
+
+                </div>
+
+
             </div>
         </div>
+
     </div>
+
 </div>
 {% endblock %}
