--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -3,11 +3,11 @@
 {% load average_rating %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
@@ -22,72 +22,92 @@
             <h2 class="logo-font sub-heading-font">SHOP {{ category_name }}</h2>
         </div>
     </div>
+
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-6">
+            <form method="get" action="" class="d-flex justify-content-center sort-field">
+                <div class="d-flex">
+                    <select name="sort" id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-grey rounded-2 bg-searchbox">
+                        <option value="price" {% if current_sorting == 'price_asc' or current_sorting == 'price_desc' %}selected{% endif %}>Sort by Price</option>
+                    </select>
+                    <select name="direction" id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-grey rounded-2 bg-searchbox">
+                        <option value="asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Ascending</option>
+                        <option value="desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Descending</option>
+                    </select>
+                    <input type="hidden" name="q" value="{{ request.GET.q }}">
+                    <button type="submit" class="btn">Sort</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    
     <div class="row">
-        <form method="get" action="">
-            <select name="sort">
-                <option value="price" {% if current_sorting == 'price_asc' or current_sorting == 'price_desc' %}selected{% endif %}>Sort by Price</option>
-            </select>
-            <select name="direction">
-                <option value="asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Ascending</option>
-                <option value="desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Descending</option>
-            </select>
-            <input type="hidden" name="q" value="{{ request.GET.q }}">
-            <button type="submit">Sort</button>
-        </form>
-        
 
         <div class="product-container col-10 offset-1">
             <div class="row mt-1 mb-2"></div>
             <div class="row">
                 {% for product in products %}
-                    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                        <div class="shadow-drop-center card h-100 border-0">
-                            {% if product.image %}
-                            <a href="{% url 'product_detail' product.id %}">
-                                <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-                            </a>
-                            {% else %}
-                            <a href="{% url 'product_detail' product.id %}">
-                                <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                            </a>
-                            {% endif %}
-                            <div class="card-body pb-0">
-                                <p class="mb-0">{{ product.name }}</p>
-                            </div>
-                            <div class="card-footer bg-white pt-0 border-0 text-left">
-                                <div class="row">
-                                    <div class="col">
-                                        <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
-                                        {% if product.reviews.all %}
-                                            <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.reviews.all | calculate_average_rating }} / 5</small>
-                                        {% else %}
-                                            <small class="text-muted">No Rating</small>
-                                        {% endif %}
-                                    </div>
+                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                    <div class="shadow-drop-center card h-100 border-0">
+                        {% if product.image %}
+                        <a href="{% url 'product_detail' product.id %}">
+                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                        </a>
+                        {% else %}
+                        <a href="{% url 'product_detail' product.id %}">
+                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png"
+                                alt="{{ product.name }}">
+                        </a>
+                        {% endif %}
+                        <div class="card-body pb-0">
+                            <p class="mb-0">{{ product.name }}</p>
+                        </div>
+                        <div class="card-footer bg-white pt-0 border-0 text-left">
+                            <div class="row">
+                                <div class="col">
+                                    <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+
+                                    {% if product.category %}
+                                    <p class="small mt-1 mb-0">
+                                        <a class="text-muted" href="{% url 'category_products' category_id=product.category.id %}">
+                                            <i class="fas fa-tag mr-1"></i>{{ product.category.get_friendly_name }}
+                                        </a>
+                                    </p>
+                                    {% endif %}
+
+                                    {% if product.reviews.all %}
+                                    <small class="text-muted"><i
+                                            class="fas fa-star mr-1"></i>{{ product.reviews.all | calculate_average_rating }}
+                                        / 5</small>
+                                    {% else %}
+                                    <small class="text-muted">No Rating</small>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
                     </div>
-                    {% if forloop.counter|divisibleby:1 %}
-                        <div class="col-12 d-sm-none mb-5 hr-prod-spacer">
-                            <hr>
-                        </div>
-                    {% endif %}                        
-                    {% if forloop.counter|divisibleby:2 %}
-                        <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5 hr-prod-spacer">
-                            <hr>
-                        </div>
-                    {% endif %}
-                    {% if forloop.counter|divisibleby:3 %}
-                        <div class="col-12 d-none d-lg-block d-xl-none mb-5 hr-prod-spacer">
-                            <hr>
-                        </div>
-                    {% endif %}
-                    {% if forloop.counter|divisibleby:4 %}
-                        <div class="col-12 d-none d-xl-block mb-5 hr-prod-spacer">
-                            <hr>
-                        </div>
-                    {% endif %}
+                </div>
+                {% if forloop.counter|divisibleby:1 %}
+                <div class="col-12 d-sm-none mb-5 hr-prod-spacer">
+                    <hr>
+                </div>
+                {% endif %}
+                {% if forloop.counter|divisibleby:2 %}
+                <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5 hr-prod-spacer">
+                    <hr>
+                </div>
+                {% endif %}
+                {% if forloop.counter|divisibleby:3 %}
+                <div class="col-12 d-none d-lg-block d-xl-none mb-5 hr-prod-spacer">
+                    <hr>
+                </div>
+                {% endif %}
+                {% if forloop.counter|divisibleby:4 %}
+                <div class="col-12 d-none d-xl-block mb-5 hr-prod-spacer">
+                    <hr>
+                </div>
+                {% endif %}
                 {% endfor %}
             </div>
             <div class="col-12 mb-5 hr-prod-bot-spacer">
@@ -95,6 +115,11 @@
             </div>
         </div>
     </div>
+</div>
+<div class="btt-button rounded-0">
+    <a class="btt-link d-flex h-100">
+        <i class="fas fa-arrow-up mx-auto my-auto"></i>
+    </a>	
 </div>
 {% else %}
 <div class="overlay"></div>
@@ -109,4 +134,13 @@
     </div>
 </div>
 {% endif %}
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+		$('.btt-link').click(function(e) {
+			window.scrollTo(0,0)
+		})
+	</script>
 {% endblock %}
