--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -12,14 +12,14 @@
 {% endblock %}
 
 {% block content %}
-
+<!-- Container elements -->
 <div class="overlay mob-prod-det-spacer"></div>
 <div class="container-fluid">
     <div class="row">
 
+        <!-- Image element -->
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
             <div class="image-container my-5">
-
                 {% if product.image %}
                 <a>
                     <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
@@ -31,108 +31,125 @@
                 {% endif %}
             </div>
         </div>
-        <div class="col-12 col-md-6 col-lg-4">
-            <div class="product-details-container mb-5 mt-md-5">
-                <p class="mb-0">{{ product.name }}</p>
-                <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
-                {% if product.category %}
-                <p class="small mt-1 mb-0">
-                    <a class="text-muted" href="{% url 'category_products' category_id=product.category.id %}">
-                        <i class="fas fa-tag mr-1"></i>{{ product.category.get_friendly_name }}
-                    </a>
-                </p>
-                {% endif %}
-                {% if product.reviews.all %}
-                <small class="text-muted"><i
-                        class="fas fa-star mr-1"></i>{{ product.reviews.all | calculate_average_rating }} / 5</small>
-                {% else %}
-                <small class="text-muted">No Rating</small>
-                {% endif %}
-                <p class="mt-3">{{ product.description }}</p>
 
-            </div>
-        </div>
-    </div>
-</div>
+        <!-- Tabbed content -->
+        <div class="col-12 col-md-6 col-lg-6">
 
-<div class="container review-tabs">
-    <ul class="nav nav-tabs" id="myTabs" role="tablist">
-        <li class="nav-item">
-            <a class="nav-link active" id="tab1-tab" data-toggle="tab" href="#tab1" role="tab" aria-controls="tab1"
-                aria-selected="true">Reviews</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" id="tab2-tab" data-toggle="tab" href="#tab2" role="tab" aria-controls="tab2"
-                aria-selected="false">Post Review</a>
-        </li>
-    </ul>
-    <div class="tab-content" id="myTabsContent">
-        <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
-            <!-- Content for Tab 1 goes here -->
-            <div class="container">
-                <div class="card">
-                  <div class="card-header">
-                    <h4>Reviews</h4>
-                  </div>
-                  <div class="card-body">
-                    {% if reviews %}
-                      {% for review in reviews %}
-                        <div class="card mb-3">
-                          <div class="card-body">
-                            <h5 class="card-title">Review #{{ review.id }}</h5>
-                            <p class="card-text">Rating: {{ review.rating }}</p>
-                            <p class="card-text">Comment: {{ review.comment }}</p>
-                          </div>
+            <!-- Tabbed headers -->
+            <div class="container-fluid review-tabs">
+                <ul class="nav nav-tabs" id="myTabs" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="tab1-tab" data-toggle="tab" href="#tab1" role="tab"
+                            aria-controls="tab1" aria-selected="true">Product Details</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="tab2-tab" data-toggle="tab" href="#tab2" role="tab" aria-controls="tab2"
+                            aria-selected="false">Reviews</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="tab3-tab" data-toggle="tab" href="#tab3" role="tab" aria-controls="tab3"
+                            aria-selected="false">Post Review</a>
+                    </li>
+                </ul>
+
+                <!-- Main tabs content -->
+                <div class="tab-content" id="myTabsContent">
+
+                    <!-- Details tab -->
+                    <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="product-details-container mb-5 mt-md-5">
+                                <p class="mb-0">{{ product.name }}</p>
+                                <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                                {% if product.category %}
+                                <p class="small mt-1 mb-0">
+                                    <a class="text-muted"
+                                        href="{% url 'category_products' category_id=product.category.id %}">
+                                        <i class="fas fa-tag mr-1"></i>{{ product.category.get_friendly_name }}
+                                    </a>
+                                </p>
+                                {% endif %}
+                                {% if product.reviews.all %}
+                                <small class="text-muted"><i
+                                        class="fas fa-star mr-1"></i>{{ product.reviews.all | calculate_average_rating }}
+                                    /
+                                    5</small>
+                                {% else %}
+                                <small class="text-muted">No Rating</small>
+                                {% endif %}
+                                <p class="mt-3">{{ product.description }}</p>
+                            </div>
                         </div>
-                      {% endfor %}
-                    {% else %}
-                      <p>No reviews available.</p>
-                    {% endif %}
-                  </div>
-                </div>
-              </div>
-              
-        </div>
-        <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
-            <!-- Content for Tab 2 goes here -->
-            
-            <div class="col-12">
-                <h3>Tab 2 Content</h3>
-                {% if user.is_authenticated %}
-                {% if not is_reviewed %}
-                <form method="post">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <label for="rating">Rating:</label>
-                        <select name="rating" id="rating" class="form-control">
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                        </select>
                     </div>
-                    <div class="form-group">
-                        <label for="comment">Comment:</label>
-                        <textarea name="comment" id="comment" class="form-control" rows="3"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-                {% else %}
-                <p>You have already submitted a review for this product.</p>
-                {% endif %}
-                {% else %}
-                <p>Please <a href="{% url 'account_login' %}">Login</a> or <a
-                        href="{% url 'account_signup' %}">Register</a> to submit a review.</p>
-                {% endif %}
-            </div>
 
+                    <!-- reviews tab -->
+                    <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
+                        <div class="col-12 p-0">
+                            <div class="container-fluid">
+                                {% if reviews %}
+                                {% for review in reviews %}
+                                <div class="card">
+                                    <div class="card-header">
+                                        <h5 class="card-title">User: {{ review.user.username }}</h5>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="card mb-3">
+                                            <div class="card-body">
+                                                <p class="card-text">Rating: {{ review.rating }}</p>
+                                                <p class="card-text">Comment: {{ review.comment }}</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                {% endfor %}
+                                {% else %}
+                                <p>No reviews available.</p>
+                                {% endif %}
+                            </div>
+                        </div>
+                        
+                    </div>
+
+                    <!-- post review tab -->
+                    <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
+                        {% if user.is_authenticated %}
+                        {% if not is_reviewed %}
+                        <form method="post">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                <label for="rating">Rating:</label>
+                                <select name="rating" id="rating" class="form-control">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="comment">Comment:</label>
+                                <textarea name="comment" id="comment" class="form-control" rows="3"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                        {% else %}
+                        <p>You have already submitted a review for this product.</p>
+                        {% endif %}
+                        {% else %}
+                        <p>Please <a href="{% url 'account_login' %}">Login</a> or <a
+                                href="{% url 'account_signup' %}">Register</a>
+                            to submit a review.</p>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-
+</div>
 {% endblock %}
 
+<!-- script to handle tabbed content -->
 {% block postloadjs %}
 <script>
     $(document).ready(function () {
