--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -31,7 +31,7 @@
                 {% endif %}
             </div>
         </div>
-        
+
 
         <!-- Tabbed content -->
         <div class="col-12 col-md-6 col-lg-6">
@@ -79,6 +79,47 @@
                                 <small class="text-muted">No Rating</small>
                                 {% endif %}
                                 <p class="mt-3">{{ product.description }}</p>
+                                <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                                    {% csrf_token %}
+                                    <div class="form-row">
+                                        <div class="col-12">
+                                            <p class="mt-3"><strong>Quantity:</strong></p>
+                                            <div class="form-group w-50">
+                                                <div class="input-group">
+                                                    <input class="form-control qty_input" type="number" name="quantity"
+                                                        value="1" min="1" max="99" data-item_id="{{ product.id }}"
+                                                        id="id_qty_{{ product.id }}">
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-12">
+                                            {% if request.META.HTTP_REFERER %}
+                                            <a href="{{ request.META.HTTP_REFERER }}" class="btn btn-outline-black rounded-0 mt-5">
+                                                <span class="icon">
+                                                    <i class="fas fa-chevron-left"></i>
+                                                </span>
+                                                <span class="text-uppercase">Keep Shopping</span>
+                                            </a>
+                                            {% else %}
+                                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                                                <span class="icon">
+                                                    <i class="fas fa-chevron-left"></i>
+                                                </span>
+                                                <span class="text-uppercase">Keep Shopping</span>
+                                            </a>
+                                            {% endif %}
+                                            
+                                            <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5"
+                                                value="Add to Bag">
+                                        </div>
+                                        {% if request.META.HTTP_REFERER %}
+                                        <input type="hidden" name="redirect_url" value="{{ request.META.HTTP_REFERER }}">
+                                        {% else %}
+                                        <input type="hidden" name="redirect_url" value="{% url 'products' %}">
+                                        {% endif %}
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
@@ -93,7 +134,7 @@
                                     <div class="card-header d-flex">
                                         <h5 class="card-title inline-block">User: {{ review.user.username }}</h5>
                                         <h5 class="card-title inline-block ml-auto">Rating: {{ review.rating }}</h5>
-                                      </div>                                      
+                                    </div>
                                     <div class="card-body">
                                         <div class="card mb-3">
                                             <div class="card-body">
@@ -108,7 +149,7 @@
                                 {% endif %}
                             </div>
                         </div>
-                        
+
                     </div>
 
                     <!-- post review tab -->
@@ -129,7 +170,8 @@
                             </div>
                             <div class="form-group">
                                 <label for="comment">Comment:</label>
-                                <textarea name="comment" id="comment" class="review-comment form-control" rows="3"></textarea>
+                                <textarea name="comment" id="comment" class="review-comment form-control"
+                                    rows="3"></textarea>
                             </div>
                             <button type="submit" class="rating-button btn rounded-2 text-uppercase">Submit</button>
                         </form>
